--- a/06gy_cpp/06gy_cpp.tex
+++ b/06gy_cpp/06gy_cpp.tex
@@ -1,12 +1,12 @@
-\documentclass[a4paper,11.5pt]{article}
+\documentclass[a4paper,11.5pt,table]{article}
 \usepackage[textwidth=170mm, textheight=230mm, inner=20mm, top=20mm, bottom=30mm]{geometry}
 \usepackage[normalem]{ulem}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \PassOptionsToPackage{defaults=hu-min}{magyar.ldf}
 \usepackage[magyar]{babel}
-\usepackage{amsmath, xcolor, amsthm,amssymb,paralist,array, ellipsis, graphicx}
-%\usepackage{marvosym}
+\usepackage{amsmath, amsthm,amssymb, paralist, tikz, multirow}
+\usetikzlibrary{arrows, positioning}
 
 \usepackage{listings}
 \lstset{
@@ -17,82 +17,17 @@
 	tabsize = 4
 }
 
-\makeatletter
-\renewcommand*{\mathellipsis}{%
-	\mathinner{%
-		\kern\ellipsisbeforegap%
-		{\ldotp}\kern\ellipsisgap%
-		{\ldotp}\kern\ellipsisgap%
-		{\ldotp}\kern\ellipsisaftergap%
-	}%
-}
-\renewcommand*{\dotsb@}{%
-	\mathinner{%
-		\kern\ellipsisbeforegap%
-		{\cdotp}\kern\ellipsisgap%
-		{\cdotp}\kern\ellipsisgap%
-		{\cdotp}\kern\ellipsisaftergap%
-	}%
-}
-\renewcommand*{\@cdots}{%
-	\mathinner{%
-		\kern\ellipsisbeforegap%
-		{\cdotp}\kern\ellipsisgap%
-		{\cdotp}\kern\ellipsisgap%
-		{\cdotp}\kern\ellipsisaftergap%
-	}%
-}
-\renewcommand*{\ellipsis@default}{%
-	\ellipsis@before
-	\kern\ellipsisbeforegap
-	.\kern\ellipsisgap
-	.\kern\ellipsisgap
-	.\kern\ellipsisgap
-	\ellipsis@after\relax}
-\renewcommand*{\ellipsis@centered}{%
-	\ellipsis@before
-	\kern\ellipsisbeforegap
-	.\kern\ellipsisgap
-	.\kern\ellipsisgap
-	.\kern\ellipsisaftergap
-	\ellipsis@after\relax}
-\AtBeginDocument{%
-	\DeclareRobustCommand*{\dots}{%
-		\ifmmode\@xp\mdots@\else\@xp\textellipsis\fi}}
-\def\ellipsisgap{.1em}
-\def\ellipsisbeforegap{.05em}
-\def\ellipsisaftergap{.05em}
-\makeatother
-
 \usepackage{hyperref}
 
 \begin{document}
 	%%%%%%%%%%%RÖVIDÍTÉSEK%%%%%%%%%%
 	\setlength\parindent{0pt}
-	\def\s{\hspace{0.2mm}\vphantom{\beta}}
-	\def\Z{\mathbb{Z}}
-	\def\Q{\mathbb{Q}}
-	\def\R{\mathbb{R}}
-	\def\C{\mathbb{C}}
-	\def\N{\mathbb{N}}
-	\def\Ra{\overline{\mathbb{R}}}
-	
-	\def\sume{\displaystyle\sum_{n=1}^{+\infty}}
-	\def\sumn{\displaystyle\sum_{n=0}^{+\infty}}
-	
-	\def\narrow{\underset{n\rightarrow+\infty}{\longrightarrow}}
-	\def\limn{\displaystyle\lim_{n\to +\infty}}
-	\def\limx{\displaystyle\lim_{x\to +\infty}}
+	\def\<{<\hspace{0mm}<}
 	
 	\theoremstyle{definition}
-	\newtheorem{theorem}{Tétel}[subsection] 
-	
-	\theoremstyle{definition}
-	\newtheorem{definition}[theorem]{Definíció} 
-	\newtheorem{example}[theorem]{Példa} 
-	\newtheorem{task}[theorem]{Feladat} 
-	\newtheorem{note}[theorem]{Megjegyzés}
+	\newtheorem{note}{Megjegyzés}[subsection]
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+	
 	\begin{center}
 		{\LARGE\textbf{C++}}
 		
@@ -212,27 +147,27 @@ List& operator=(const List &other)
 	\medskip
 
 	Sikeresen létrehoztunk egy \textit{reguláris típust}.
-	\begin{definition}
-		Egy \texttt{T} típus \textbf{reguláris típus}, ha van neki:
-		\begin{enumerate}
-			\item konstruktora
-			\item destruktora
-			\item értékadás operátora, továbbá
-			\begin{lstlisting}
+	\medskip
+	
+	Egy \texttt{T} típus \textbf{reguláris típus}, ha van neki:
+	\begin{enumerate}
+		\item konstruktora
+		\item destruktora
+		\item értékadás operátora, továbbá
+		\begin{lstlisting}
 T b;
 T a;
 a = b;
-			\end{lstlisting}
-			Ekkor \texttt{a} ekvivalens \texttt{b}-vel, és ha \texttt{a}-t módosítjuk, akkot \texttt{b} nem változik, és viszont.
-			\item másoló konstruktora, továbbá
-			\begin{lstlisting}
+		\end{lstlisting}
+		Ekkor \texttt{a} ekvivalens \texttt{b}-vel, és ha \texttt{a}-t módosítjuk, akkot \texttt{b} nem változik, és viszont.
+		\item másoló konstruktora, továbbá
+		\begin{lstlisting}
 T b;
 T a = b;
-			\end{lstlisting}
-			Ekkor \texttt{a} ekvivalens \texttt{b}-vel, és ha \texttt{a}-t módosítjuk, akkot \texttt{b} nem változik, és viszont.
-			\item egyenlőségvizsgálat (\texttt{operator==}) (nem feltétlenül szükséges)
-		\end{enumerate}
-	\end{definition}
+		\end{lstlisting}
+		Ekkor \texttt{a} ekvivalens \texttt{b}-vel, és ha \texttt{a}-t módosítjuk, akkot \texttt{b} nem változik, és viszont.
+		\item egyenlőségvizsgálat (\texttt{operator==}) (nem feltétlenül szükséges)
+	\end{enumerate}
 	\subsection{Adattagok védettsége}
 	Már majdnem készen vagyunk, ám a hülye felhasználó még mindig lábon lőheti magát, pl így:
 	\begin{lstlisting}
@@ -375,15 +310,15 @@ public:
 };
 \end{lstlisting}
 	E két metódus segítségével már meg tudjuk adni a lista elejét és végét! \texttt{head.begin()} lesz \texttt{head} a legelső eleme, \texttt{head.end()} az utolsó utáni elem. Már csak magát az iterátort kell megírni, mely egy un. \textit{forward iterator} lesz.
-	\begin{definition}
-		Egy \texttt{T} típus \textbf{forward iterator}, ha rendelkezik:
-		\begin{enumerate}
-			\item \texttt{++} operátorral
-			\item egyenlőség vizsgáló operátorral \texttt{==}
-			\item egyenlőtlenség vizsgáló operátorral \texttt{!=}
-			\item dereferáló operátorral \texttt{*}
-		\end{enumerate}
-	\end{definition}
+	\medskip
+
+	Egy \texttt{T} típus \textbf{forward iterator}, ha rendelkezik:
+	\begin{enumerate}
+		\item \texttt{++} operátorral
+		\item egyenlőség vizsgáló operátorral \texttt{==}
+		\item egyenlőtlenség vizsgáló operátorral \texttt{!=}
+		\item dereferáló operátorral \texttt{*}
+	\end{enumerate}
 	De hova írjuk az \texttt{Iterator} osztályt? Hiszen ha a lista elé tesszük, az \texttt{Iterator} nem fogja tudni, hogy mi az a \texttt{List}. Ha utána tesszük, nem fogja tudni a \texttt{List} hogy mi az az \texttt{Iterator}, úgy meg nem műküdne az \texttt{end} és a \texttt{begin} metódus. Ehhez \textbf{forward deklarálni} fogunk.
 	\begin{lstlisting}
 class List; //forward declaration
@@ -590,7 +525,11 @@ public:
 	\end{lstlisting}
 	Itt már csak annyi probléma lesz, hogy \texttt{Iterator}-nak a \texttt{p} adattagja privát. Így tegyük ezt a két osztályt baráttá!
 	
-	Azonban az meglepő lehet, hogy ez a kód lefordul. Hiszen \texttt{head.begin()} egy \texttt{Iterator}-t ad vissza, hiszen \texttt{head} nem konstans! Ezt a fordító úgy oldja meg, hogy az így kapott \texttt{Iterator} típusú változóval használja a \texttt{ConstIterator} konstruktorát, ezzel \textit{implicit kódon átkonvertálja} \texttt{Iterator}-t \texttt{ConstIterator}-rá, és utána hívja meg a másoló konstruktort. Ezt megtilthatjuk a fordítónak, ha az \texttt{explicit} kulcsszót betesszük a konstruktor elé.
+	Azonban az meglepő lehet, hogy ez a kód lefordul. Hiszen \texttt{head.begin()} egy \texttt{Iterator}-t ad vissza, hiszen \texttt{head} nem konstans! Ezt a fordító úgy oldja meg, hogy az így kapott \texttt{Iterator} típusú változóval használja a \texttt{ConstIterator} konstruktorát, ezzel \textit{implicit kódon átkonvertálja} \texttt{Iterator}-t \texttt{ConstIterator}-rá, és utána hívja meg a másoló konstruktort. 
+	
+	\subsection{Explicit konstruktorok}
+	Ezt megtilthatjuk a fordítónak, ha az \texttt{explicit} kulcsszót betesszük a konstruktor elé.
+	
 \begin{lstlisting}
 class ConstIterator
 {
