--- a/02gy_cpp/02gy_cpp.tex
+++ b/02gy_cpp/02gy_cpp.tex
@@ -397,9 +397,9 @@ int& addOne(int &i)
 		Értelemszerűen pointerekkel ez ugyanúgy probléma.
 	\end{note}
 	\section{Statikus változók/függvények}
-	Statikus változó többféle van -- függően attól, hogy a definíciójukhoz szükséges \texttt{static} kulcsszót milyen kontextusba írjuk, egy másfajta változót kapunk. Működésük sokban hasonlít a globálisokéhoz.
-	\subsection{Fordítási egységre statikus változók}
-	A függvényen és névteren kívül deklarált statikus változók az adott fordítási egységre lokálisak -- élettartamuk a futás elejétől végigtartamig tart, és kizárólagosan az adott fordítási egységben láthatóak.
+	A \texttt{static} kulcsszónak számos jelentése van, annak függvényében, hogy milyen kontextusban írjuk egy változó vagy függvény elé. 
+	\subsection{Fordítási egységre lokális változók}
+	A függvényeken és osztályokon kívül deklarált statikus változók az adott fordítási egységre lokálisak -- élettartamuk a futás elejétől végigtartamig tart, és kizárólagosan az adott fordítási egységben láthatóak.
 	\medskip
 	
 	\fbox{\textbf{main.cpp}}
@@ -426,7 +426,7 @@ void f()
 	x = 0;
 }
 	\end{lstlisting}
-	Ha ezt a két fájlt együtt fordítjuk, nem kapunk fordítási hibát, ugyanis a \texttt{main.cpp}-ben lévő \texttt{x} egy teljesen más változó, mint ami az \texttt{other.cpp}-ben van.ű
+	Ha ezt a két fájlt együtt fordítjuk, nem kapunk linkelési hibát, ugyanis a \texttt{main.cpp}-ben lévő \texttt{x} egy teljesen más változó, mint ami az \texttt{other.cpp}-ben van.
 	
 	\smallskip
 	Csak úgy mint a globális változókra, fordítási egységen belül bármikor hivatkozhatunk egy statikusra, és hasonló módon inicializálódnak.
@@ -439,8 +439,8 @@ int main()
 	std::cout << ::x << std::endl; // 0
 }
 	\end{lstlisting}
-	\subsection{Függvényre statikus változók}
-	Azokat a változókat, melyek függvényen belül vannak a \texttt{static} kulcsszóval definiálva, függvényszintű változónak is szokás hívni. Élettartamuk a függvény első hívásától a program futásáig tart, míg láthatóságuk csak az adott függvényen belül van.
+	\subsection{Függvényen belüli statikus változók}
+	Azokat a változókat, melyek függvényen belül vannak a \texttt{static} kulcsszóval definiálva, függvényszintű változónak is szokás hívni. Élettartamuk a függvény első hívásától a program futásának végéig tart, míg láthatóságuk csak az adott függvényen belül van. A hagyományos lokális változókkal ellenben tehát nem semmisülnek meg, amikor az adott függvény futása befejeződik. A következő kódrészlet szemlélteti ezt a viselkedést.
 	
 	\begin{lstlisting}
 int f()
@@ -457,8 +457,8 @@ int main()
 }
 	\end{lstlisting}
 	Ahogy az megfigyelhető fent, \texttt{x} csak egyszer inicializálódik, majd a későbbi függvényhívások után egyre növekszik az értéke.
-	\subsection{Fordítási egységre statikus függvények}
-	Nem csak változókat, függvényeket is deklarálhatunk statikusnak, melyek a fordítási egységre statikusak.
+	\subsection{Fordítási egységre lokális függvények}
+  Nem csak változókat, függvényeket is deklarálhatunk statikusnak, melyek a fordítási egységre lokálisak. Figyelem! Metódusok esetében mást jelent a \texttt{static} kulcsszó, mint amit itt leírtunk.
 	\begin{lstlisting}
 static int f()
 {
@@ -467,9 +467,9 @@ static int f()
 
 int main() {std::cout << f();} // 0
 	\end{lstlisting}
-	Mint mint a változók, ezek csak az adott fordítási egységen belül érhetőek el.
-	\subsection{Névtelen névterek}
-	Egyszerre több statikus változót és függvényt is tudunk deklarálni ill. definiálni névtelen névterek (\textit{unnamed namespaces}, vagy \textit{anonymous namespaces}) segítségével. Egy név nélküli névteren belül minden változó és függvény olyan, mintha elé ki lenne írva a \texttt{static} kulcsszó.
+	Ezek a függvények csak az adott fordítási egységen belül érhetőek el.
+	\subsection{Névtelen/anonim névterek}
+	Fordítási egységre lokális változókat és függvényeket tudunk deklarálni névtelen névterek (\textit{unnamed namespaces}, vagy \textit{anonymous namespaces}) segítségével. Egy név nélküli névteren belül deklarált változók és függvények hasonlóan viselkednek, mintha eléjük lenne írva a \texttt{static} kulcsszó.
 	\begin{lstlisting}
 namespace
 {
@@ -479,7 +479,7 @@ namespace
 }
 	\end{lstlisting}
 	\begin{note}
-		Osztályra statikus változókról és függvényekről később lesz szó.
+    A \texttt{static} osztályon belüli jelentéséről később lesz szó.
 	\end{note}
 	\section{Függvény túlterhelés}
 	Térjünk vissza a korábban megírt swap függvényünkhöz.
@@ -491,7 +491,7 @@ void swap(int &a, int &b)
 	b = tmp;
 }
 	\end{lstlisting}
-	Ez a függvény mind addig jó is, amíg csak \texttt{int}-eket szeretnénk megcserélni, de mi van, ha \texttt{std::string}-eket kéne? A megoldás egyszerű, \textbf{túlterheljük} (\textit{overload}) a \texttt{swap} függvényt.
+	Ez a függvény addig jó, amíg csak \texttt{int}-eket szeretnénk megcserélni. Mi van, ha \texttt{std::string}-eket kéne? A megoldás egyszerű, \textbf{túlterheljük} (\textit{overload}) a \texttt{swap} függvényt.
 	\begin{lstlisting}
 void swap(std::string &a, std::string &b)
 {
@@ -500,12 +500,12 @@ void swap(std::string &a, std::string &b)
 	b = tmp;
 }
 	\end{lstlisting}
-	Túlterhelésnek azt nevezzük, amikor két vagy több függvénynek a neve azonos, de a paramétereik különböznek. Tagfüggvényeknél különböző konstansság is számít.
+	Túlterhelésnek azt nevezzük, amikor két vagy több függvénynek a neve azonos, de a paramétereik különböznek. Tagfüggvényeket konstansság alapján is túl lehet terhelni.
 	\begin{note}
-		A később elhangzó osztályok tagfüggvényeinél a függvény konstanssága is számít (azonos függvény különöző konstanssággal ugyanúgy túlterhelésnek számít).
+		A később elhangzó osztályok tagfüggvényeinél a függvény konstanssága is számít (azonos nevű és paraméter listájú függvény különöző konstanssággal ugyanúgy túlterhelésnek számít).
 	\end{note}
 	\subsection{Operátor túlterhelés}
-	Írjuk meg a \texttt{print} függvényt értelmesebben! Ahogy láttuk a 7. gyakorlat elején, lehetőségünk van függvényeket túlterhelni, és ez operátorokra is igaz. Ha példaként vesszük a lineáris algebrából tanult rendezett valós számhármasokat ($\mathbb{R}^3$), lehetőségünk van arra, hogy a tanultak alapján definiáljuk a köztük értelmezett összeadást.
+	Ahogy láttuk a 2. gyakorlat elején, lehetőségünk van függvényeket túlterhelni. Ez operátorokra is igaz. Ha példaként vesszük a lineáris algebrából tanult rendezett valós számhármasokat ($\R^3$), lehetőségünk van arra, hogy a tanultak alapján definiáljuk a köztük értelmezett összeadást.
 	%TODO temporális változók
 	\begin{lstlisting}
 struct LinAlgVector
@@ -534,7 +534,7 @@ int main()
 	A \texttt{main} függvényben lévő értékadás ezzel ekvivalens: \texttt{c = operator+(a, b)}, így láthatjuk, hogy az operátorok túlterhelése gyakorlatilag a függvénytúlterhelés speciális esete. 
 	\smallskip 
 	
-	A gyakran kiíratáshoz használt jobb shift operátor (\textit{right shift operator}), a $<<$ is túlterhelhető, mely kihasználható egy általunk létrehozott objektum kiíratásának definiálására. Mivel mi az \texttt{std::cout} változóval szeretnénk majd kiíratni, melynek típusa \texttt{std::ostream}, így a függvényünk első paramétere egy ilyen típus lesz, a második meg egy \texttt{LinAlgVector} típus.
+	Írjuk meg a \texttt{print} függvényt 3D vektorokra! A gyakran kiíratáshoz használt jobb shift operátor (\textit{right shift operator}), a $<<$ is túlterhelhető. Mivel mi az \texttt{std::cout} változóval szeretnénk majd kiíratni, melynek típusa \texttt{std::ostream}, így a függvényünk első paramétere egy ilyen típus lesz, a második meg egy \texttt{LinAlgVector} típus.
 	
 	\begin{lstlisting}
 /* ... */
@@ -552,5 +552,5 @@ int main()
 }
 	\end{lstlisting}
 	
-	Feltűnhet, hogy a kiírató változót a függvény végén vissza is adjuk, melynek oka az, hogy tudjuk a kiíratást láncolni.
+	Feltűnhet, hogy a stream objektumra mutató referenciát a függvény végén vissza is adjuk, hogy tudjuk a kiíratást láncolni.
 \end{document}
