--- a/02gy_cpp/02gy_cpp.tex
+++ b/02gy_cpp/02gy_cpp.tex
@@ -505,7 +505,7 @@ void swap(std::string &a, std::string &b)
 		A később elhangzó osztályok tagfüggvényeinél a függvény konstanssága is számít (azonos nevű és paraméter listájú függvény különöző konstanssággal ugyanúgy túlterhelésnek számít).
 	\end{note}
 	\subsection{Operátor túlterhelés}
-	Ahogy láttuk a 2. gyakorlat elején, lehetőségünk van függvényeket túlterhelni. Ez operátorokra is igaz. Ha példaként vesszük a lineáris algebrából tanult rendezett valós számhármasokat ($\R^3$), lehetőségünk van arra, hogy a tanultak alapján definiáljuk a köztük értelmezett összeadást.
+	Ahogy láttuk a 2. gyakorlat elején, lehetőségünk van függvényeket túlterhelni. Ez operátorokra is igaz. Ha példaként vesszük a lineáris algebrából tanult rendezett valós számhármasokat ($\mathbb{R}^3$), lehetőségünk van arra, hogy a tanultak alapján definiáljuk a köztük értelmezett összeadást.
 	%TODO temporális változók
 	\begin{lstlisting}
 struct LinAlgVector
@@ -534,7 +534,7 @@ int main()
 	A \texttt{main} függvényben lévő értékadás ezzel ekvivalens: \texttt{c = operator+(a, b)}, így láthatjuk, hogy az operátorok túlterhelése gyakorlatilag a függvénytúlterhelés speciális esete. 
 	\smallskip 
 	
-	Írjuk meg a \texttt{print} függvényt 3D vektorokra! A gyakran kiíratáshoz használt jobb shift operátor (\textit{right shift operator}), a $<<$ is túlterhelhető. Mivel mi az \texttt{std::cout} változóval szeretnénk majd kiíratni, melynek típusa \texttt{std::ostream}, így a függvényünk első paramétere egy ilyen típus lesz, a második meg egy \texttt{LinAlgVector} típus.
+	Írjuk meg a \texttt{print} függvényt 3D vektorokra! A gyakran kiíratáshoz használt jobb shift operátor (\textit{right shift operator}), a \texttt{\<} is túlterhelhető. Mivel mi az \texttt{std::cout} változóval szeretnénk majd kiíratni, melynek típusa \texttt{std::ostream}, így a függvényünk első paramétere egy ilyen típus lesz, a második meg egy \texttt{LinAlgVector} típus.
 	
 	\begin{lstlisting}
 /* ... */
