--- a/01gy_cpp/01gy_cpp.tex
+++ b/01gy_cpp/01gy_cpp.tex
@@ -335,7 +335,7 @@ int main()
 		A header fájlokba nem szabad definíciókat rakni (bár kivétel létezik, pl. template-ek, inline függvények, melyekről később lesz szó).
 	\end{note}
 	
-	\subsection{Figyelmeztetések}
+	\section{Figyelmeztetések}
 
   A fordító gyanús vagy hibás kódrészlet esetén tud figyelmeztetéseket generálni. A legtöbb fordító alapértelmezetten elég kevés hibalehetőségre figyelmeztet. További figyelmeztetések bekapcsolásával hamarabb, már fordítási időben megtalálhatunk bizonyos hibákat vagy nem definiált viselkedéseket. Ezért ajánlott a \texttt{-Wall}, \texttt{-Wextra} kapcsolókat használni.
 
