--- a/09gy_cpp/09gy_cpp.tex
+++ b/09gy_cpp/09gy_cpp.tex
@@ -127,6 +127,7 @@ int main()
 	\end{itemize}
 	Minden STL konténer rendelkezik konstans és nem konstans iterátorral, fordított irányú és konstans fordított irányú iterátorral melyre így hivatkozhatunk:
 	\begin{center}
+		\setlength{\extrarowheight}{2pt}
 		\begin{tabular}{|l|l|l|l|}
 			\hline
 			Iterátor típus&Ahogy hivatkozhatunk rájuk&Első elem&Past-the-end\\
