--- a/10gy_cpp/10gy_cpp.tex
+++ b/10gy_cpp/10gy_cpp.tex
@@ -50,6 +50,7 @@
 	\smallskip
 	Az STL konténerek iterátorai is különböző iterator kategóriákban vannak:
 	\begin{center}
+		\setlength{\extrarowheight}{2pt}
 		\begin{tabular}{|l|l|}
 			\hline
 			STL konténer&Iteratorának típusa\\
