--- a/11gy_cpp/11gy_cpp.tex
+++ b/11gy_cpp/11gy_cpp.tex
@@ -115,6 +115,7 @@ public:
 \end{lstlisting}
 	A \texttt{protected} tagokhoz csak az adott osztály fér hozzá, és azon osztályok, melyek ebből örökölnek. Nem csak publikusan tudunk örökölni, \texttt{protected}-del, és \texttt{private}-el is. Az alábbi táblázat mutatja, hogy az származott osztály (\textit{derived class}) milyen adattagokhoz fér hozzá a bázisosztályból (\textit{base class}) különböző öröklődési típusok esetén:
 	\begin{center}
+		\setlength{\extrarowheight}{2pt}
 		\begin{tabular}{|c||c|c|c|}
 			\hline
 			Öröklődés típusa:&public&protected&private\\
@@ -326,6 +327,7 @@ Sikidom * sp = f(k);
 	
 	Az alábbi táblázat jól összefoglalja az itt megállapítottakat (piros: a módosítás nem megfelelő, zöld: a módosítás jó lesz):
 	\begin{center}
+		\setlength{\extrarowheight}{2pt}
 		\begin{tabular}{|l||c|c|c|c|}
 			\hline
 			&Eredeti típus&\multicolumn{3}{c|}{Módosított típus}\\
