Fixed a typo in a code example.

--- a/01gy_cpp/01gy_cpp.tex
+++ b/01gy_cpp/01gy_cpp.tex
@@ -482,7 +482,7 @@ int main() {}
 	
 	\fbox{\textbf{fecske.cpp}}
 	\begin{lstlisting}
-std::ostream& o = std::cout << " World";
+std::ostream& o2 = std::cout << " World";
 	\end{lstlisting}
 	Itt nem specifikált a két globális változók inicializációs sorrendje, és ha más sorredben linkeljük a fordítási egységekből keletkező tárgykódot, mást ír ki.
 	
