--- a/01gy_cpp/01gy_cpp.tex
+++ b/01gy_cpp/01gy_cpp.tex
@@ -5,7 +5,7 @@
 \usepackage[T1]{fontenc}
 \PassOptionsToPackage{defaults=hu-min}{magyar.ldf}
 \usepackage[magyar]{babel}
-\usepackage{amsmath, amsthm,amssymb, paralist, tikz, multirow}
+\usepackage{amsmath, amsthm,amssymb, paralist, tikz, multirow, float}
 \usetikzlibrary{arrows, positioning}
 
 \usepackage{listings}
@@ -115,60 +115,60 @@ int main()
 		\item Linkelés (Szerkesztés)
 	\end{compactenum}
 	
-	\begin{center}
+	\begin{figure}[!h]
+		\centering
 		\begin{tikzpicture}
-		\tikzstyle{Node} = [rectangle, minimum width=4cm, minimum height=5mm, text centered, draw=black, fill= gray!20]
-		\tikzstyle{FileName} = [rectangle, minimum width=4cm, minimum height=5mm, text centered, draw=black, fill= white]
-		\tikzstyle{NodeExe} = [rectangle, minimum width=5cm, minimum height=5mm, text centered, draw=black, fill= gray!20]
-		\tikzstyle{FileNameExe} = [rectangle, minimum width=5cm, minimum height=5mm, text centered, draw=black, fill= white]
-		\tikzstyle{arrow} = [thick,->,>=stealth]
-		
-		
-		\node (header) [Node] {Header állomány};
-		\node (headerFileName) [FileName, below = 0mm of header] {\texttt{.h} / \texttt{.hpp}};
-		
-		\node (cpp1) [Node, below left = of header] {Cpp fájl};
-		\node (cpp1FileName) [FileName, below = 0mm of cpp1] {\texttt{.c} / \texttt{.cpp}};
-		
-		\node (cpp2) [Node, below right = of header] {Cpp fájl};
-		\node (cpp2FileName) [FileName, below = 0mm of cpp2] {\texttt{.c} / \texttt{.cpp}};
-		
-		\node (translationUnit1) [Node, below = of cpp1] {Fordítási egység};
-		\node (translationUnit1FileName) [FileName, below = 0mm of translationUnit1] {\texttt{.c} / \texttt{.cpp}};
-		
-		\node (translationUnit2) [Node, below = of cpp2] {Fordítási egység};
-		\node (translationUnit2FileName) [FileName, below = 0mm of translationUnit2] {\texttt{.c} / \texttt{.cpp}};
-		
-		\node (objectFile1) [Node, below = of translationUnit1] {Tárgykód};
-		\node (objectFile1FileName) [FileName, below = 0mm of objectFile1] {\texttt{.o}};
-		
-		\node (objectFile2) [Node, below = of translationUnit2] {Tárgykód};
-		\node (objectFile2FileName) [FileName, below = 0mm of objectFile2] {\texttt{.o}};
-		
-
-		\node (libFile1) [Node, below = 4.1 cm of header] {Könyvtár};
-		\node (libFile1FileName) [FileName, below = 0mm of libFile1] {\texttt{.a} / \texttt{.lib} / \texttt{.so} / \texttt{.dll}};
-		
-		\node (exe) [NodeExe, below = 6.2 cm of header] {Végrehajtható állomány};
-		\node (exeFileName) [FileNameExe, below = 0mm of exe] {\texttt{.exe} / \texttt{.out}};
-		
-		
-		\draw[arrow] (headerFileName) -- (cpp1);
-		\draw[arrow] (headerFileName) -- (cpp2);
-		\draw[arrow] (cpp1FileName) -- (translationUnit1);
-		\draw[arrow] (cpp2FileName) -- (translationUnit2);
-		\draw[arrow] (translationUnit1FileName) -- (objectFile1);
-		\draw[arrow] (translationUnit2FileName) -- (objectFile2);
-		\draw[arrow] (objectFile1FileName) -- (exe);
-		\draw[arrow] (objectFile2FileName) -- (exe);
-		\draw[arrow] (libFile1FileName) -- (exe);
-		%TODO lehet az utolsó két oszlopot fel kéne cserélni
-		
+			\tikzstyle{Node} = [rectangle, minimum width=4cm, minimum height=5mm, text centered, draw=black, fill= gray!20]
+			\tikzstyle{FileName} = [rectangle, minimum width=4cm, minimum height=5mm, text centered, draw=black, fill= white]
+			\tikzstyle{NodeExe} = [rectangle, minimum width=5cm, minimum height=5mm, text centered, draw=black, fill= gray!20]
+			\tikzstyle{FileNameExe} = [rectangle, minimum width=5cm, minimum height=5mm, text centered, draw=black, fill= white]
+			\tikzstyle{arrow} = [thick,->,>=stealth]
+			
+			
+			\node (header) [Node] {Header állomány};
+			\node (headerFileName) [FileName, below = 0mm of header] {\texttt{.h} / \texttt{.hpp}};
+			
+			\node (cpp1) [Node, below left = of header] {Cpp fájl};
+			\node (cpp1FileName) [FileName, below = 0mm of cpp1] {\texttt{.c} / \texttt{.cpp}};
+			
+			\node (cpp2) [Node, below right = of header] {Cpp fájl};
+			\node (cpp2FileName) [FileName, below = 0mm of cpp2] {\texttt{.c} / \texttt{.cpp}};
+			
+			\node (translationUnit1) [Node, below = of cpp1] {Fordítási egység};
+			\node (translationUnit1FileName) [FileName, below = 0mm of translationUnit1] {\texttt{.c} / \texttt{.cpp}};
+			
+			\node (translationUnit2) [Node, below = of cpp2] {Fordítási egység};
+			\node (translationUnit2FileName) [FileName, below = 0mm of translationUnit2] {\texttt{.c} / \texttt{.cpp}};
+			
+			\node (objectFile1) [Node, below = of translationUnit1] {Tárgykód};
+			\node (objectFile1FileName) [FileName, below = 0mm of objectFile1] {\texttt{.o}};
+			
+			\node (objectFile2) [Node, below = of translationUnit2] {Tárgykód};
+			\node (objectFile2FileName) [FileName, below = 0mm of objectFile2] {\texttt{.o}};
+			
+			
+			\node (libFile1) [Node, below = 4.1 cm of header] {Könyvtár};
+			\node (libFile1FileName) [FileName, below = 0mm of libFile1] {\texttt{.a} / \texttt{.lib} / \texttt{.so} / \texttt{.dll}};
+			
+			\node (exe) [NodeExe, below = 6.2 cm of header] {Végrehajtható állomány};
+			\node (exeFileName) [FileNameExe, below = 0mm of exe] {\texttt{.exe} / \texttt{.out}};
+			
+			
+			\draw[arrow] (headerFileName) -- (cpp1);
+			\draw[arrow] (headerFileName) -- (cpp2);
+			\draw[arrow] (cpp1FileName) -- (translationUnit1);
+			\draw[arrow] (cpp2FileName) -- (translationUnit2);
+			\draw[arrow] (translationUnit1FileName) -- (objectFile1);
+			\draw[arrow] (translationUnit2FileName) -- (objectFile2);
+			\draw[arrow] (objectFile1FileName) -- (exe);
+			\draw[arrow] (objectFile2FileName) -- (exe);
+			\draw[arrow] (libFile1FileName) -- (exe);
+			%TODO lehet az utolsó két oszlopot fel kéne cserélni
 		\end{tikzpicture}
 		\smallskip
 		
-		Szürkében az adott fordítási lépés neve, alatta az így létrehozott fájl kiterjesztése (leggyakrabban).	
-	\end{center}
+		Szürkében az adott fordítási lépés neve, alatta az így létrehozott fájl kiterjesztése (leggyakrabban).
+	\end{figure}
 	A fordítás a preprocesszor parancsok végrehajtásával kezdődik (például a \textbf{header fájl}ok beillesztése a \textbf{cpp fájl}okba), az így kapott fájlot hívjuk \textbf{fordítási egység}nek (\textit{translation unit}). A fordítási egységek külön-külön fordulnak \textbf{tárgykód}dá (\textit{object file}). Ahhoz hogy a tárgykódokból \textbf{futtatható állomány}t (\textit{executable file}) lehessen készíteni, össze kell linkelni őket. A saját forráskódunkból létrejövő tárgykódok mellett a linker a felhasznált könyvtárak tárgykódjait is bele fogja szerkeszteni a végleges futtatható állományba.
 	\medskip
 	
