--- a/04gy_cpp/04gy_cpp.tex
+++ b/04gy_cpp/04gy_cpp.tex
@@ -5,7 +5,7 @@
 \usepackage[T1]{fontenc}
 \PassOptionsToPackage{defaults=hu-min}{magyar.ldf}
 \usepackage[magyar]{babel}
-\usepackage{amsmath, amsthm,amssymb, paralist, tikz, multirow}
+\usepackage{amsmath, amsthm,amssymb, paralist, tikz, multirow, float}
 \usetikzlibrary{arrows, positioning}
 
 \usepackage{listings}
@@ -256,7 +256,8 @@ struct Hallgato
 }
 	\end{lstlisting} 
 	Amikor ennek a méretét kérdezzük le (figyeljük meg, hogy változott a sorrend), akkor a válasz már 24. Ennek az oka az, hogy míg az első esetben így volt eltárolva a memóriában: (ne feledjük, ez még mindig implementációfüggő!)
-	\begin{center}
+	\begin{figure}[H]
+		\centering
 		\begin{tikzpicture}
 		\tikzstyle{Node} = [rectangle, minimum width=2.5cm, minimum height=7mm, text centered, draw=black, fill= gray!20, line width = 1.2pt]
 		\tikzstyle{Border} = [rectangle, minimum width=2.5cm, minimum height=7mm, text centered, draw=black, line width = 1.2pt]
@@ -269,9 +270,10 @@ struct Hallgato
 		\node (border) [Border, right = -0.2mm of 1] {};
 		
 		\end{tikzpicture}
-	\end{center}
+	\end{figure}
 	Azaz, \texttt{atlag}, illetve \texttt{kor} és \texttt{magassag} pont efértek 1-1 gép szóban. Viszont, ha megcseréljük a sorrendet, ez már nem lesz igaz:
-	\begin{center}
+	\begin{figure}[H]
+		\centering
 		\begin{tikzpicture}
 		\tikzstyle{Node} = [rectangle, minimum width=2.5cm, minimum height=7mm, text centered, draw=black, fill= gray!20]
 		\tikzstyle{Border} = [rectangle, minimum width=2.5cm, minimum height=7mm, text centered, draw=black, line width = 1.2pt]
@@ -284,9 +286,10 @@ struct Hallgato
 		\node (border) [Border, right = -1.26cm of 1] {};
 		\node (border) [Border, left = -1.26cm of 3] {};
 		\end{tikzpicture}
-	\end{center}
+	\end{figure}
 	Sajnos itt már szétvágná \texttt{atlag}-ot. Ez nagyon nem hatékony, mert állandóan gondolnia kéne a fordítónak arra, hogy épp hogyan kaparja össze \texttt{atlag}-ot.
-	\begin{center}
+	\begin{figure}[H]
+		\centering
 		\begin{tikzpicture}
 		\tikzstyle{Node} = [rectangle, minimum width=2.5cm, minimum height=7mm, text centered, draw=black, fill= gray!20, line width = 1.2pt]
 		\tikzstyle{HalfNode} = [rectangle, minimum width=1.25cm, minimum height=7mm, text centered, draw=black, fill= gray!20, line width = 0.2pt]
@@ -301,7 +304,7 @@ struct Hallgato
 		\node (border) [Border, right = -0.2mm of 1] {};
 		\node (border) [Border, left = -0.2mm of 1] {};
 		\end{tikzpicture}
-	\end{center}
+	\end{figure}
 	Ez így sokkal hatékonyabb, bár 3 gép szót használ. Ebben az esetben a kód eltárolja, hogy legyen egy kis \textit{padding } a változó után. Tehát semmi extráért nem kell fizetnünk, de attól még picit több memóriát foglalunk le.
 	\smallskip
 	
