Tables look nicer.

--- a/04gy_cpp/04gy_cpp.tex
+++ b/04gy_cpp/04gy_cpp.tex
@@ -127,6 +127,7 @@ int main()
 	Egy konstans karakterekből álló 6 méretű tömb (\texttt{const char[6]}). Azért nem 5 elemű, mert a sztring el végén el kell tárolni a végét jelző \texttt{\textbackslash 0} karaktert.
 	
 	\begin{center}
+		\setlength{\extrarowheight}{2pt}
 		\begin{tabular}{|c|c|c|c|c|c|}
 			\hline
 			H&E&L&L&O&$\backslash$0\\
